Lab1/gen/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.0 from ParCPP.y
-----------------------------------------------------------------------------

state 43 contains 1 shift/reduce conflicts.
state 45 contains 6 reduce/reduce conflicts.
state 128 contains 1 reduce/reduce conflicts.
state 180 contains 1 shift/reduce conflicts.
state 246 contains 2 shift/reduce conflicts.
state 247 contains 2 shift/reduce conflicts.
state 248 contains 4 shift/reduce conflicts.
state 249 contains 4 shift/reduce conflicts.
state 250 contains 4 shift/reduce conflicts.
state 251 contains 4 shift/reduce conflicts.
state 305 contains 1 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListDec1 -> ListDec1                       (4)
	%start_pDec1 -> Dec1                               (5)
	%start_pDec -> Dec                                 (6)
	%start_pBody -> Body                               (7)
	%start_pArg1 -> Arg1                               (8)
	%start_pArg -> Arg                                 (9)
	%start_pStm -> Stm                                 (10)
	%start_pListId -> ListId                           (11)
	%start_pListStm -> ListStm                         (12)
	%start_pElse -> Else                               (13)
	%start_pExp16 -> Exp16                             (14)
	%start_pExp15 -> Exp15                             (15)
	%start_pExp14 -> Exp14                             (16)
	%start_pExp13 -> Exp13                             (17)
	%start_pExp12 -> Exp12                             (18)
	%start_pExp11 -> Exp11                             (19)
	%start_pExp10 -> Exp10                             (20)
	%start_pExp9 -> Exp9                               (21)
	%start_pExp8 -> Exp8                               (22)
	%start_pExp4 -> Exp4                               (23)
	%start_pExp3 -> Exp3                               (24)
	%start_pExp2 -> Exp2                               (25)
	%start_pExp -> Exp                                 (26)
	%start_pExp1 -> Exp1                               (27)
	%start_pExp5 -> Exp5                               (28)
	%start_pExp6 -> Exp6                               (29)
	%start_pExp7 -> Exp7                               (30)
	%start_pListExp -> ListExp                         (31)
	%start_pQConst -> QConst                           (32)
	%start_pItem -> Item                               (33)
	%start_pListItem -> ListItem                       (34)
	%start_pLiteral -> Literal                         (35)
	%start_pListString -> ListString                   (36)
	%start_pType1 -> Type1                             (37)
	%start_pType -> Type                               (38)
	%start_pTemplate -> Template                       (39)
	%start_pListType1 -> ListType1                     (40)
	Integer -> L_integ                                 (41)
	Char -> L_charac                                   (42)
	Double -> L_doubl                                  (43)
	String -> L_quoted                                 (44)
	Id -> L_Id                                         (45)
	Program -> ListDef                                 (46)
	ListDef ->                                         (47)
	ListDef -> ListDef Def                             (48)
	Def -> Type Id '(' ListArg ')' Body                (49)
	Def -> 'inline' Type Id '(' ListArg ')' Body       (50)
	Def -> 'typedef' Type Id ';'                       (51)
	Def -> Dec ';'                                     (52)
	Def -> 'using' QConst ';'                          (53)
	Def -> 'struct' Id '{' ListDec1 '}' ';'            (54)
	ListArg ->                                         (55)
	ListArg -> Arg                                     (56)
	ListArg -> Arg ',' ListArg                         (57)
	ListDec1 ->                                        (58)
	ListDec1 -> ListDec1 Dec1 ';'                      (59)
	Dec1 -> Type ListId                                (60)
	Dec1 -> '(' Dec ')'                                (61)
	Dec -> Type ListId '=' Exp                         (62)
	Dec -> Dec1                                        (63)
	Body -> ';'                                        (64)
	Body -> '{' ListStm '}'                            (65)
	Arg1 -> Type                                       (66)
	Arg1 -> Type Id                                    (67)
	Arg1 -> Type Id '=' Exp                            (68)
	Arg1 -> '(' Arg ')'                                (69)
	Arg -> 'const' Arg1                                (70)
	Arg -> Arg1                                        (71)
	Stm -> Exp ';'                                     (72)
	Stm -> Dec ';'                                     (73)
	Stm -> 'const' Type ListId '=' Exp ';'             (74)
	Stm -> 'return' Exp ';'                            (75)
	Stm -> 'while' '(' Exp ')' Stm                     (76)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (77)
	Stm -> 'for' '(' Dec ';' Exp ';' Exp ')' Stm       (78)
	Stm -> 'if' '(' Exp ')' Stm Else                   (79)
	Stm -> 'typedef' Type Id ';'                       (80)
	Stm -> Body                                        (81)
	Stm -> 'struct' Id '{' ListDec1 '}' ';'            (82)
	ListId -> Id                                       (83)
	ListId -> Id ',' ListId                            (84)
	ListStm ->                                         (85)
	ListStm -> ListStm Stm                             (86)
	Else -> 'else' Stm                                 (87)
	Else ->                                            (88)
	Exp16 -> Literal                                   (89)
	Exp16 -> QConst                                    (90)
	Exp16 -> '(' Exp ')'                               (91)
	Exp15 -> Exp15 '[' Exp ']'                         (92)
	Exp15 -> Exp16 '(' ListExp ')'                     (93)
	Exp15 -> Exp16                                     (94)
	Exp14 -> Exp14 '.' Exp15                           (95)
	Exp14 -> Exp14 '->' Exp15                          (96)
	Exp14 -> Exp14 '++'                                (97)
	Exp14 -> Exp14 '--'                                (98)
	Exp14 -> Exp15                                     (99)
	Exp13 -> '++' Exp13                                (100)
	Exp13 -> '--' Exp13                                (101)
	Exp13 -> '*' Exp13                                 (102)
	Exp13 -> '!' Exp13                                 (103)
	Exp13 -> Exp14                                     (104)
	Exp12 -> Exp12 '*' Exp13                           (105)
	Exp12 -> Exp12 '/' Exp13                           (106)
	Exp12 -> Exp12 '%' Exp13                           (107)
	Exp12 -> Exp13                                     (108)
	Exp11 -> Exp11 '+' Exp12                           (109)
	Exp11 -> Exp11 '-' Exp12                           (110)
	Exp11 -> Exp12                                     (111)
	Exp10 -> Exp10 '<<' Exp11                          (112)
	Exp10 -> Exp10 '>>' Exp11                          (113)
	Exp10 -> Exp11                                     (114)
	Exp9 -> Exp9 '<' Exp9                              (115)
	Exp9 -> Exp9 '>' Exp9                              (116)
	Exp9 -> Exp9 '<=' Exp9                             (117)
	Exp9 -> Exp9 '>=' Exp9                             (118)
	Exp9 -> Exp10                                      (119)
	Exp8 -> Exp8 '==' Exp8                             (120)
	Exp8 -> Exp8 '!=' Exp8                             (121)
	Exp8 -> Exp9                                       (122)
	Exp4 -> Exp4 '&&' Exp5                             (123)
	Exp4 -> Exp5                                       (124)
	Exp3 -> Exp3 '||' Exp4                             (125)
	Exp3 -> Exp4                                       (126)
	Exp2 -> Exp3 '=' Exp2                              (127)
	Exp2 -> Exp3 '+=' Exp2                             (128)
	Exp2 -> Exp3 '-=' Exp2                             (129)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (130)
	Exp2 -> Exp3                                       (131)
	Exp -> 'throw' Exp2                                (132)
	Exp -> Exp1                                        (133)
	Exp1 -> Exp2                                       (134)
	Exp5 -> Exp6                                       (135)
	Exp6 -> Exp7                                       (136)
	Exp7 -> Exp8                                       (137)
	ListExp ->                                         (138)
	ListExp -> Exp                                     (139)
	ListExp -> Exp ',' ListExp                         (140)
	QConst -> ListItem                                 (141)
	Item -> Id                                         (142)
	Item -> Template                                   (143)
	ListItem -> Item                                   (144)
	ListItem -> Item '::' ListItem                     (145)
	Literal -> Integer                                 (146)
	Literal -> ListString                              (147)
	Literal -> Char                                    (148)
	Literal -> Double                                  (149)
	ListString -> String                               (150)
	ListString -> String ListString                    (151)
	Type1 -> Item                                      (152)
	Type1 -> 'int'                                     (153)
	Type1 -> 'double'                                  (154)
	Type1 -> 'void'                                    (155)
	Type1 -> 'bool'                                    (156)
	Type1 -> QConst                                    (157)
	Type1 -> '(' Type ')'                              (158)
	Type -> Type1 '&'                                  (159)
	Type -> Type1                                      (160)
	Template -> Id '<' ListType1 '>'                   (161)
	ListType1 -> Type1                                 (162)
	ListType1 -> Type1 ',' ListType1                   (163)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'for'          { PT _ (TS _ 38) }
	'if'           { PT _ (TS _ 39) }
	'inline'       { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'struct'       { PT _ (TS _ 43) }
	'throw'        { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'using'        { PT _ (TS _ 46) }
	'void'         { PT _ (TS _ 47) }
	'while'        { PT _ (TS _ 48) }
	'{'            { PT _ (TS _ 49) }
	'||'           { PT _ (TS _ 50) }
	'}'            { PT _ (TS _ 51) }
	L_integ        { PT _ (TI $$) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListDec1 rule  4
	%start_pDec1    rule  5
	%start_pDec     rule  6
	%start_pBody    rule  7
	%start_pArg1    rule  8
	%start_pArg     rule  9
	%start_pStm     rule  10
	%start_pListId  rule  11
	%start_pListStm rule  12
	%start_pElse    rule  13
	%start_pExp16   rule  14
	%start_pExp15   rule  15
	%start_pExp14   rule  16
	%start_pExp13   rule  17
	%start_pExp12   rule  18
	%start_pExp11   rule  19
	%start_pExp10   rule  20
	%start_pExp9    rule  21
	%start_pExp8    rule  22
	%start_pExp4    rule  23
	%start_pExp3    rule  24
	%start_pExp2    rule  25
	%start_pExp     rule  26
	%start_pExp1    rule  27
	%start_pExp5    rule  28
	%start_pExp6    rule  29
	%start_pExp7    rule  30
	%start_pListExp rule  31
	%start_pQConst  rule  32
	%start_pItem    rule  33
	%start_pListItem rule  34
	%start_pLiteral rule  35
	%start_pListString rule  36
	%start_pType1   rule  37
	%start_pType    rule  38
	%start_pTemplate rule  39
	%start_pListType1 rule  40
	Integer         rule  41
	Char            rule  42
	Double          rule  43
	String          rule  44
	Id              rule  45
	Program         rule  46
	ListDef         rules 47, 48
	Def             rules 49, 50, 51, 52, 53, 54
	ListArg         rules 55, 56, 57
	ListDec1        rules 58, 59
	Dec1            rules 60, 61
	Dec             rules 62, 63
	Body            rules 64, 65
	Arg1            rules 66, 67, 68, 69
	Arg             rules 70, 71
	Stm             rules 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82
	ListId          rules 83, 84
	ListStm         rules 85, 86
	Else            rules 87, 88
	Exp16           rules 89, 90, 91
	Exp15           rules 92, 93, 94
	Exp14           rules 95, 96, 97, 98, 99
	Exp13           rules 100, 101, 102, 103, 104
	Exp12           rules 105, 106, 107, 108
	Exp11           rules 109, 110, 111
	Exp10           rules 112, 113, 114
	Exp9            rules 115, 116, 117, 118, 119
	Exp8            rules 120, 121, 122
	Exp4            rules 123, 124
	Exp3            rules 125, 126
	Exp2            rules 127, 128, 129, 130, 131
	Exp             rules 132, 133
	Exp1            rule  134
	Exp5            rule  135
	Exp6            rule  136
	Exp7            rule  137
	ListExp         rules 138, 139, 140
	QConst          rule  141
	Item            rules 142, 143
	ListItem        rules 144, 145
	Literal         rules 146, 147, 148, 149
	ListString      rules 150, 151
	Type1           rules 152, 153, 154, 155, 156, 157, 158
	Type            rules 159, 160
	Template        rule  161
	ListType1       rules 162, 163

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 47
	'bool'         reduce using rule 47
	'double'       reduce using rule 47
	'inline'       reduce using rule 47
	'int'          reduce using rule 47
	'struct'       reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_Id           reduce using rule 47
	%eof           reduce using rule 47

	Program        goto state 163
	ListDef        goto state 164

State 1


	'('            reduce using rule 47
	'bool'         reduce using rule 47
	'double'       reduce using rule 47
	'inline'       reduce using rule 47
	'int'          reduce using rule 47
	'struct'       reduce using rule 47
	'typedef'      reduce using rule 47
	'using'        reduce using rule 47
	'void'         reduce using rule 47
	L_Id           reduce using rule 47
	%eof           reduce using rule 47

	ListDef        goto state 162

State 2


	'('            shift, and enter state 149
	'bool'         shift, and enter state 51
	'double'       shift, and enter state 52
	'inline'       shift, and enter state 158
	'int'          shift, and enter state 53
	'struct'       shift, and enter state 159
	'typedef'      shift, and enter state 160
	'using'        shift, and enter state 161
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55

	Id             goto state 43
	Def            goto state 155
	Dec1           goto state 123
	Dec            goto state 156
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 157
	Template       goto state 48

State 3


	'('            shift, and enter state 144
	'bool'         shift, and enter state 51
	'const'        shift, and enter state 145
	'double'       shift, and enter state 52
	'int'          shift, and enter state 53
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55
	%eof           reduce using rule 55

	Id             goto state 43
	ListArg        goto state 153
	Arg1           goto state 141
	Arg            goto state 154
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 143
	Template       goto state 48

State 4


	'('            reduce using rule 58
	'bool'         reduce using rule 58
	'double'       reduce using rule 58
	'int'          reduce using rule 58
	'void'         reduce using rule 58
	L_Id           reduce using rule 58
	%eof           reduce using rule 58

	ListDec1       goto state 152

State 5


	'('            shift, and enter state 149
	'bool'         shift, and enter state 51
	'double'       shift, and enter state 52
	'int'          shift, and enter state 53
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55

	Id             goto state 43
	Dec1           goto state 150
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 151
	Template       goto state 48

State 6


	'('            shift, and enter state 149
	'bool'         shift, and enter state 51
	'double'       shift, and enter state 52
	'int'          shift, and enter state 53
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55

	Id             goto state 43
	Dec1           goto state 123
	Dec            goto state 148
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 129
	Template       goto state 48

State 7


	';'            shift, and enter state 131
	'{'            shift, and enter state 140

	Body           goto state 147

State 8


	'('            shift, and enter state 144
	'bool'         shift, and enter state 51
	'double'       shift, and enter state 52
	'int'          shift, and enter state 53
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55

	Id             goto state 43
	Arg1           goto state 146
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 143
	Template       goto state 48

State 9


	'('            shift, and enter state 144
	'bool'         shift, and enter state 51
	'const'        shift, and enter state 145
	'double'       shift, and enter state 52
	'int'          shift, and enter state 53
	'void'         shift, and enter state 54
	L_Id           shift, and enter state 55

	Id             goto state 43
	Arg1           goto state 141
	Arg            goto state 142
	QConst         goto state 44
	Item           goto state 45
	ListItem       goto state 46
	Type1          goto state 58
	Type           goto state 143
	Template       goto state 48

State 10


	'!'            shift, and enter state 95
	'('            shift, and enter state 130
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	';'            shift, and enter state 131
	'bool'         shift, and enter state 51
	'const'        shift, and enter state 132
	'do'           shift, and enter state 133
	'double'       shift, and enter state 52
	'for'          shift, and enter state 134
	'if'           shift, and enter state 135
	'int'          shift, and enter state 53
	'return'       shift, and enter state 136
	'struct'       shift, and enter state 137
	'throw'        shift, and enter state 100
	'typedef'      shift, and enter state 138
	'void'         shift, and enter state 54
	'while'        shift, and enter state 139
	'{'            shift, and enter state 140
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Dec1           goto state 123
	Dec            goto state 124
	Body           goto state 125
	Stm            goto state 126
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 84
	Exp3           goto state 85
	Exp2           goto state 86
	Exp            goto state 127
	Exp1           goto state 88
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 128
	Item           goto state 45
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Type1          goto state 58
	Type           goto state 129
	Template       goto state 48

State 11


	L_Id           shift, and enter state 55

	Id             goto state 121
	ListId         goto state 122

State 12


	'!'            reduce using rule 85
	'('            reduce using rule 85
	'*'            reduce using rule 85
	'++'           reduce using rule 85
	'--'           reduce using rule 85
	';'            reduce using rule 85
	'bool'         reduce using rule 85
	'const'        reduce using rule 85
	'do'           reduce using rule 85
	'double'       reduce using rule 85
	'for'          reduce using rule 85
	'if'           reduce using rule 85
	'int'          reduce using rule 85
	'return'       reduce using rule 85
	'struct'       reduce using rule 85
	'throw'        reduce using rule 85
	'typedef'      reduce using rule 85
	'void'         reduce using rule 85
	'while'        reduce using rule 85
	'{'            reduce using rule 85
	L_integ        reduce using rule 85
	L_charac       reduce using rule 85
	L_doubl        reduce using rule 85
	L_quoted       reduce using rule 85
	L_Id           reduce using rule 85
	%eof           reduce using rule 85

	ListStm        goto state 120

State 13


	'else'         shift, and enter state 119
	%eof           reduce using rule 88

	Else           goto state 118

State 14


	'('            shift, and enter state 96
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 117
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 15


	'('            shift, and enter state 96
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 116
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 16


	'('            shift, and enter state 96
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 115
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 17


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 114
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 18


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 113
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 19


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 112
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 20


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 111
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 21


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 110
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 22


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 109
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 23


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 108
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 24


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 84
	Exp3           goto state 107
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 25


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 84
	Exp3           goto state 85
	Exp2           goto state 106
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 26


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	'throw'        shift, and enter state 100
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 84
	Exp3           goto state 85
	Exp2           goto state 86
	Exp            goto state 105
	Exp1           goto state 88
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 27


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp4           goto state 84
	Exp3           goto state 85
	Exp2           goto state 86
	Exp1           goto state 104
	Exp5           goto state 89
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 28


	'!'            shift, and enter state 95
	'('            shift, and enter state 96
	'*'            shift, and enter state 97
	'++'           shift, and enter state 98
	'--'           shift, and enter state 99
	L_integ        shift, and enter state 42
	L_charac       shift, and enter state 69
	L_doubl        shift, and enter state 70
	L_quoted       shift, and enter state 63
	L_Id           shift, and enter state 55

	Integer        goto state 64
	Char           goto state 65
	Double         goto state 66
	String         goto state 61
	Id             goto state 43
	Exp16          goto state 75
	Exp15          goto state 76
	Exp14          goto state 77
	Exp13          goto state 78
	Exp12          goto state 79
	Exp11          goto state 80
	Exp10          goto state 81
	Exp9           goto state 82
	Exp8           goto state 83
	Exp5           goto state 103
	Exp6           goto state 90
	Exp7           goto state 91
	QConst         goto state 93
	Item           goto state 71
	ListItem       goto state 46
	Literal        goto state 94
	ListString     goto state 68
	Template       goto state 48

State 29

